<?php

namespace App;

enum TransactionType: string
{
    case MASUK = 'masuk';
    case KELUAR = 'keluar';
}
